# AM215_SportsArbitrage

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  ODDSAPI_historical_extraction.ipynb  README.md  environment.yml  odds_2024_filtered.csv  pyproject.toml  requirements.txt  setup.py
.github/workflows/: docs.yml  python-app.yml
data/: nfl_games_with_stats.csv
docs/: api.rst  conf.py  index.rst  models.rst  requirements.txt  usage.rst
profiling/: profile_summary.txt
results/: arbitrage_opportunities.csv  cv_results.csv  roi_results.csv  test_results.csv
results_backup/: arbitrage_opportunities.csv  roi_results.csv  test_results.csv
scripts/: profile_analysis.py
src/: ODDSAPI_historical_extraction.ipynb  run.py
src/sports_arbitrage/: __init__.py  nfl_data_collection.py  plotting.py  utils.py
src/sports_arbitrage/models/: __init__.py  elo.py  random_forest.py  rank_centrality.py  xgboost_model.py
tests/: __init__.py  conftest.py  test_arbitrage.py  test_metrics.py  test_models.py  test_regression.py  test_utils.py
tests/golden/: elo_predictions.npy  roi_results.json
